// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconGraduationHat should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-graduation-hat "
  height={12}
  viewBox="0 0 12 12"
  width={12}
>
  <path
    className="fill-color"
    d="M2.818 6.444v1.82L6 10l3.182-1.737V6.444L6 8.181 2.818 6.444zM6 2L1 4.667l5 2.666 4.09-2.182v3.071H11V4.667L6 2z"
    fill="#8EA6B2"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconGraduationHat should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-graduation-hat test"
  height={15}
  title="title"
  viewBox="0 0 12 12"
  width={15}
>
  <path
    className="fill-color"
    d="M2.818 6.444v1.82L6 10l3.182-1.737V6.444L6 8.181 2.818 6.444zM6 2L1 4.667l5 2.666 4.09-2.182v3.071H11V4.667L6 2z"
    fill="#8EA6B2"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;
